# play-substrate-node-template

./: README.md
node/: Cargo.toml
pallets/poe/: Cargo.toml  README.md
pallets/poe/src/: lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
