[package]
name = "pallet-poe"
version = "4.0.0-dev"
description = "FRAME pallet Proof of existence."
authors = ["simon<blockman1024@gmail.com>"]
homepage = "xinmin.eth"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/vsiryxm/play-substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# codec 可以帮助我们将链上存储项的类型进行编解码
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }

# scale-info 将链上存储项的类型自动导出给前端使用
# 自动注册 runtime 模块中使用的函数参数和存储项的类型信息，从而前端在调用模块时无需再注册类型信息
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }


# frame-support 添加了runtime开发所需要的宏和接口
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# frame-system 定义了一些系统接口，包括了一些常用的数据类型，比如BlockNumber，哈希类型Hashing，AccountId
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
# frame-benchmarking 用于基准测试
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
# POE中需要用到集合类型，加入sp-std
sp-std = { default-features = false, version = "4.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }

[dev-dependencies]
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
